# seahorse-nemo

./: ChangeLog  Makefile.in  README  aclocal.m4  config.guess  config.sub  configure  configure.ac
nemo-ext/: Makefile.am  Makefile.in  seahorse-nemo-module.c  seahorse-nemo.c
po/: POTFILES.in  ar.po  as.po  ast.po  az.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  ku.po  lt.po  (+36 more)
tool/: Makefile.in  seahorse-pgp-encrypted.desktop.in  seahorse-pgp-keys.desktop.in  seahorse-pgp-signature.desktop.in
